# swagger.yml
@@ -100,6 +100,12 @@ paths:
                   properties:
                     name:
                       type: string
+              role:
+                type: array
+                items:
+                  properties:
+                    name:
+                      type: string
 
   /project:
     get:
